# Esp32FeederController

./: .gitignore  LICENSE  README.md
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Feeder.cpp  Feeder.hxx  FeederManager.cpp  FeederManager.hxx  GCodeServer.cpp  GCodeServer.hxx  I2Cbus.cpp  I2Cbus.hxx  MCP23017.hxx  PCA9685.hxx  SocInfo.cpp  SocInfo.hxx  Utils.hxx  WiFiManager.cpp  WiFiManager.hxx  config.hxx  idf_component.yml  main.cpp
pcb/: FeederController.kicad_pcb  FeederController.kicad_prl  FeederController.kicad_pro  FeederController.kicad_sch  README.md  power.kicad_sch  servo.kicad_sch  servo1.kicad_sch  servo2.kicad_sch  sym-lib-table
pcb/Components/: TTGO-T1-DEVKIT-C.kicad_mod  TTGO-T1-DEVKITC.lib
pcb/Feeder/: Feeder-4x8-panel.kicad_pcb  Feeder-Panelized-Silkscreen.kicad_pcb  Feeder-Panelized-Silkscreen.kicad_prl  Feeder-Panelized-Silkscreen.kicad_pro  Feeder-Panelized.kicad_pcb  Feeder-Panelized.kicad_prl  Feeder-panel.kicad_pcb  Feeder-panel.kicad_prl  Feeder-panel.kicad_pro  Feeder.kicad_pcb  Feeder.kicad_prl  Feeder.kicad_sch  IMPORTANT-ORDERING-INSTRUCTIONS.txt  fp-info-cache  fp-lib-table
pcb/FeederController/: FeederController.kicad_pcb  FeederController.kicad_prl  FeederController.kicad_pro  FeederController.kicad_sch  fp-info-cache  fp-lib-table  power.kicad_sch  servo1.kicad_sch  servo2.kicad_sch
